[package]
name = "uchinoepower"
version = "1.5.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bincode = "2.0.1"
chrono = "0.4.41"
chrono-tz = "0.10.3"
clap = { version = "4.5.39", features = ["derive"] }
cron = "0.15.0"
daemonize = "0.5.0"
dotenv = "0.15.0"
nom = "8.0.0"
rust_decimal = { version = "1.37.2", features = ["macros"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serialport = "4.7.2"
sqlx = { version = "0.8.6", features = ["chrono", "rust_decimal", "postgres", "runtime-tokio", "tls-rustls-ring-native-roots"] }
tokio = { version = "1.46.0", features = ["full"] }
toml = "0.8.23"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "local-time"] }
