[package]
name = "uchinoepower"
version = "1.10.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bincode = "2.0.1"
chrono = "0.4.41"
chrono-tz = "0.10.3"
clap = { version = "4.5.39", features = ["derive"] }
color-eyre = "0.6.5"
cron = "0.15.0"
crossterm = { version = "0.28.1", features = ["event-stream"] }
daemonize = "0.5.0"
dotenv = "0.15.0"
futures = "0.3.31"
hsv = "0.1.1"
nom = "8.0.0"
ratatui = "0.29.0"
rust_decimal = { version = "1.37.2", features = ["macros"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serialport = "4.7.2"
sqlx = { version = "0.8.6", features = ["chrono", "rust_decimal", "postgres", "runtime-tokio", "tls-rustls-ring-native-roots"] }
tokio = { version = "1.46.0", features = ["full"] }
tokio-util = "0.7.15"
toml = "0.8.23"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "local-time"] }
